# ilbersaglio

./: .gitignore  Cargo.toml  README.md
resources/models/: README.md  setup-model.ps1
resources/models/it-mini-quant/: config.json
src/: correlation.rs  error.rs  lib.rs  main.rs  onnx_embedder.rs
tests/fixtures/: chain_cases.jsonl
