[package]
name = "ilbersaglio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI e libreria Rust onnx-only per correlazione semantica tra parole italiane con modello ONNX obbligatorio"

[lib]
name = "ilbersaglio"
path = "src/lib.rs"

[[bin]]
name = "ilbersaglio-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
tract-onnx = "0.21"
tempfile = "3.14"
zip = "0.6"

[dev-dependencies]
approx = "0.5"
